tests/baselines/reference/breakTarget3.errors.txt
tests/cases/compiler/breakTarget3.ts(2,1): error TS7028: Unused label.


==== tests/cases/compiler/breakTarget3.ts (1 errors) ====
    target1:
    target2:
    ~~~~~~~
!!! error TS7028: Unused label.
    while (true) {
      break target1;
    }